# wc-clone

./: README.md  main.py  pyproject.toml
wc_coding_challenge/application/: word_counter_api.py
wc_coding_challenge/infrastructure/: file_repository.py  word_like_repository.py
wc_coding_challenge/model/: word_like.py
wc_coding_challenge/presentation/: command_line.py  presentation_protocol.py
wc_coding_challenge/use_cases/: count_bytes.py  count_chars.py  count_lines.py  count_words.py
